--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -1,5 +1,6 @@
 @use './variables' as *;
 @use './fonts' as *;
+@use "sass:color";
 @mixin skewBtn($w,$h){
   display: flex;
   align-items: center;
@@ -25,14 +26,15 @@
     z-index: 1;
   }
   &::before {
-      content: "";
-      position: absolute;
-      width: 5px;
-      height: 100%;
-      background-color: $light;
-      transform: skew(-17deg);
-      top: 0;
-      right: -10px;
+    content: "";
+    position: absolute;
+    width: 5px;
+    height: 100%;
+    background-color: $light;
+    transform: skew(-17deg);
+    top: 0;
+    right: -10px;
+    transition: all 0.3s ease-in-out;
   }
   &::after {
       content: "";
@@ -40,6 +42,22 @@
       inset: 0;
       background-color: $buttonColor;
       transform: skew(-17deg);
+      transition: all 0.3s ease-in-out;
+    }
+    @media (min-width: 1280px) {
+      &:hover {
+        &::after {
+          background-color: color.adjust($buttonColor, $lightness: -15%);
+          transform: skew(0);
+        }
+  
+        &::before {
+          background-color: color.adjust($light, $lightness: 10%);
+          box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5);
+          transform: skew(0);
+          right: -5px;
+        }
+      }
     }
 }
 @mixin skew($bc){
@@ -49,6 +67,7 @@
       inset: 0;
       border: 1px solid $bc;
       transform: skew(-17deg);
+      transition: all 0.3s ease-in-out;
     }
 }
 
