--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -88,6 +88,10 @@
       width: 113px;
       height: 39px;
     }
+    svg{
+      width: 100%;
+      height: 100%;
+    }
   }
   &__contact{
     margin-left: auto;
