--- a/src/assets/styles/layout/_base.scss
+++ b/src/assets/styles/layout/_base.scss
@@ -31,6 +31,10 @@ html,body{
   font-family: $primaryFont, sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .wrapper{
     max-width: 1920px;
     min-width: 320px;
