--- a/src/assets/styles/blocks/_posts.scss
+++ b/src/assets/styles/blocks/_posts.scss
@@ -2,6 +2,12 @@
 @use '../mixins' as *;
 .posts{
   padding: 0 0 256px;
+  @include notebook {
+      padding: 0 0 156px;
+    }
+  @include tablet {
+      padding: 0 0 43px;
+    }
   &__items{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -36,6 +42,9 @@
     margin-top: 60px;
     margin-left: auto;
     margin-right: auto;
+    @include tablet {
+        margin-top: 30px;
+      }
   }
   &__card{
     &-content{
